RESOLVED FIXED204539
[LFC][IFC] Text content is not exactly rare data.
https://bugs.webkit.org/show_bug.cgi?id=204539
Summary [LFC][IFC] Text content is not exactly rare data.
alan
Reported 2019-11-22 15:08:19 PST
it's very common.
Attachments
Patch (8.89 KB, patch)
2019-11-22 15:12 PST, alan
no flags
Radar WebKit Bug Importer
Comment 1 2019-11-22 15:08:43 PST
alan
Comment 2 2019-11-22 15:12:28 PST
WebKit Commit Bot
Comment 3 2019-11-22 16:38:13 PST
Comment on attachment 384205 [details] Patch Clearing flags on attachment: 384205 Committed r252816: <https://trac.webkit.org/changeset/252816>
WebKit Commit Bot
Comment 4 2019-11-22 16:38:14 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.